chore: Add code formatter